--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -37,9 +37,22 @@
 }
 
 .contacts__mail-text {
+  color: inherit;
+  text-decoration: none;
+
   padding-right: 12px;
   padding-bottom: 2px;
   border-bottom: 1px solid #62D1BA;
+
+  &:hover {
+    color: #46C1AE;
+    border-bottom: 1px solid rgba(70, 193, 174, 1)
+  }
+
+  &:active {
+    color: #46C1AE;
+    border-bottom: 1px solid rgba(70, 193, 174, 0.1)
+  }
 }
 
 .contacts__address {
