--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -10,31 +10,50 @@
 }
 
 .products__item {
-  border: 1px solid #ECECEC;
-  margin-bottom: 30px;
+  margin-bottom: 31px;
 }
 
 .products__item:last-child {
   margin: 0;
 }
 
+.product {
+  &:hover .product__desc {
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  &:active .product__desc{
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+  }
+}
+
 .product__desc {
+  border: 1px solid #ECECEC;
   padding: 0 28px;
 }
 
+.product__image {
+  display: block;
+}
+
 .product__name {
+  display: block;
+  text-decoration: none;
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   color: #000000;
 
   margin: 0;
-  margin-top: 24px;
+  margin-top: 28px;
   margin-bottom: 5px;
 
-  &--big-basket {
-    margin-top: 20px;
-    margin-bottom: 9px;
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 }
 
@@ -48,21 +67,40 @@
   margin-bottom: 16px;
 }
 
+.product__price-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding-top: 23px;
+  border-top: 1px solid #ECECEC;
+
+  margin: 0;
+  margin-bottom: 25px;
+}
+
 .product__price {
   font-weight: 700;
   font-size: 15px;
   line-height: 24px;
   color: #000000;
 
-  border-top: 1px solid #ECECEC;
-  background-image: url("../../img/cart.svg");
-  background-repeat: no-repeat;
-  background-position: right -2px top 22px;
-
-  padding-top: 23px;
-
   margin: 0;
-  margin-bottom: 25px;
+}
+
+.product__cart-icon {
+  opacity: 0.2;
+  cursor: pointer;
+
+  &:hover {
+    color: #63D1BB;
+    opacity: 1;
+  }
+
+  &:active {
+    color: #63D1BB;
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -137,7 +175,6 @@
   }
 
   .product__image {
-    flex-shrink: 0;
     width: 316px;
     height: 462px;
   }
