--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,10 +10,11 @@
 @import "blocks/contacts.scss";
 @import "blocks/footer.scss";
 @import "blocks/content.scss";
-@import "blocks/form.scss";
 @import "blocks/radio.scss";
 @import "blocks/checkbox.scss";
 @import "blocks/input.scss";
+@import "blocks/textarea.scss";
+@import "blocks/form.scss";
 @import "blocks/products.scss";
 @import "blocks/creation.scss";
 @import "blocks/modal.scss";
