--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -73,6 +73,10 @@
   background: #FFFFFF;
   border: 2px solid rgba(68, 68, 68, 0.1);
   cursor: pointer;
+
+  &:hover {
+    border: 2px solid rgba(68, 68, 68, 0.3) ;
+  }
 }
 
 .modal__input:checked + .modal__label {
