--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -51,6 +51,14 @@
 
     display: none;
   }
+
+  &:hover::before {
+    border: 2px solid #62D1BA;
+  }
+
+  &:active::before {
+    border: 2px solid rgba(0, 0, 0, 0.3);
+  }
 }
 
 .radio__input:checked+.radio__label::after {
