--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -7,6 +7,18 @@
   display: none;
 }
 
+.footer__logo-link {
+  color: #000000;
+
+  &:hover {
+    color: rgba(70, 193, 174, 1);
+  }
+
+  &:active{
+    color: rgba(70, 193, 174, 0.3);
+  }
+}
+
 .socials {
   display: flex;
   justify-content: center;
@@ -24,43 +36,58 @@
 }
 
 .socials__item {
-  width: 25px;
-  height: 30px;
-
-  background-repeat: no-repeat;
-  background-position: center;
-
-  margin-bottom: 27px;
-
-  &--instagram {
-    background-image: url("../../img/insta.svg");
-  }
-  &--facebook {
-    background-image: url("../../img/fb.svg");
-  }
-  &--twitter {
-    background-image: url("../../img/twitter.svg");
-  }
+  margin-bottom: 23px;
 
   &:not(:last-child) {
-    margin-right: 35px;
+    margin-right: 41px;
   }
 }
 
-.creator {
+.socials__link {
+  color: #000000;
+
+  &:hover {
+    color: rgba(70, 193, 174, 1);
+  }
+
+  &:active{
+    color: rgba(70, 193, 174, 0.3);
+  }
+}
+
+.socials__icon {
+  color: inherit;
+}
+
+.copyright__link {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  text-decoration: none;
+
+  &:hover .copyright__logo {
+    fill: #46C1AE;
+  }
+
+  &:active .copyright__logo {
+    fill: #46C1AE;
+    opacity: 0.3;
+  }
 }
 
-.creator__desc {
+.copyright__desc {
   font-weight: 700;
   font-size: 19px;
   line-height: 18px;
   color: #000000;
   text-align: center;
 
-  margin-right: 27px;
+  margin-right: 28px;
+}
+
+.copyright__logo {
+  fill: #63D1BB;
 }
 
 @media (min-width: $tablet-width) {
@@ -78,6 +105,7 @@
   }
 
   .socials {
+    margin-top: 7px;
     border: none;
   }
 
@@ -85,7 +113,7 @@
     margin-bottom: 0;
   }
 
-  .creator__desc  {
+  .copyright__desc  {
     margin-top: 12px;
   }
 }
