--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -18,6 +18,8 @@
 }
 
 .product {
+  user-select: none;
+
   &:hover .product__desc {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
   }
@@ -140,16 +142,16 @@
     margin: 0;
   }
 
+  .product__price-wrapper {
+    width: 100%;
+    padding-top: 25px;
+    margin-bottom: 0;
+  }
+
   .product__price {
     font-weight: 700;
     font-size: 17px;
     line-height: 24px;
-
-    background-position: right 0px top 22px;
-
-    width: 100%;
-    padding-top: 25px;
-    margin-bottom: 0;
   }
 
   .products__item:not(:last-child) {
@@ -186,9 +188,5 @@
 
   .product__info {
     margin-bottom: 11px;
-  }
-
-  .product__price {
-    background-position: right 0 top 24px;
   }
 }
