--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,5 @@
 @import "blocks/variables.scss";
+@import "blocks/page.scss";
 @import "blocks/menu.scss";
 @import "blocks/header.scss";
 @import "blocks/visually-hidden.scss";
@@ -18,7 +19,7 @@
 @import "blocks/products.scss";
 @import "blocks/creation.scss";
 @import "blocks/modal.scss";
-@import "blocks/overlay.scss";
+
 
 
 @font-face {
