--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -14,6 +14,9 @@
   background: #FFFFFF;
   border: 2px solid #444444;
 
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+
   cursor: pointer;
 
   &--form {
