--- a/source/sass/blocks/checkbox.scss
+++ b/source/sass/blocks/checkbox.scss
@@ -23,6 +23,9 @@
   line-height: 18px;
   color: #000000;
 
+  transition-duration: 0.1s;
+  transition-timing-function: linear;
+
   user-select: none;
   cursor: pointer;
 
@@ -34,6 +37,8 @@
     border: 2px solid #444444;
 
     flex-shrink: 0;
+    transition-duration: 0.1s;
+    transition-timing-function: linear;
 
     margin-right: 24px;
   }
@@ -46,6 +51,8 @@
     border-left: 2px solid #444444;
     border-bottom: 2px solid #444444;
     transform: rotate(-45deg);
+    transition-duration: 0.1s;
+    transition-timing-function: linear;
 
     position: absolute;
     top: 11px;
