--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,6 +9,8 @@
 
 .footer__logo-link {
   color: #000000;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
 
   &:hover {
     color: rgba(70, 193, 174, 1);
@@ -45,6 +47,8 @@
 
 .socials__link {
   color: #000000;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
 
   &:hover {
     color: rgba(70, 193, 174, 1);
@@ -65,6 +69,8 @@
   align-items: center;
 
   text-decoration: none;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
 
   &:hover .copyright__logo {
     fill: #46C1AE;
