--- a/source/sass/blocks/input.scss
+++ b/source/sass/blocks/input.scss
@@ -30,6 +30,9 @@
   color: #444444;
   z-index: 2;
 
+  transition-duration: 0.1s;
+  transition-timing-function: linear;
+
   &::placeholder {
     font-family: inherit;
     font-style: normal;
