--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -33,6 +33,8 @@
     height: 40px;
     border-radius: 50%;
     border: 2px solid #444444;
+    transition-duration: 0.1s;
+    transition-timing-function: linear;
 
     flex-shrink: 0;
 
@@ -48,6 +50,8 @@
     top: 11px;
     left: 12px;
     background-color: #62D1BA;
+    transition-duration: 0.1s;
+    transition-timing-function: linear;
 
     display: none;
   }
