--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -19,6 +19,10 @@
   text-align: center;
 
   margin: 0;
+
+  & pre {
+    display: none;
+  }
 }
 
 .promo-block {
@@ -47,7 +51,7 @@
     padding-bottom: 5px;
   }
 
-  &:hover .promo-block__icon{
+  &:hover .promo-block__icon {
     opacity: 0.7;
   }
 
@@ -55,7 +59,7 @@
     background-color: #59D5BC;
   }
 
-  &:active .promo-block__icon{
+  &:active .promo-block__icon {
     opacity: 0.3;
   }
 
@@ -96,7 +100,9 @@
 @media (min-width: $tablet-width) {
   .promo {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+
     position: relative;
     padding: 156px 50px 12px 50px;
     background-image: url("../../img/index/hero-desktop.jpg");
@@ -131,10 +137,23 @@
     line-height: 50px;
 
     margin-left: -5px;
+
+    & pre {
+      display: inline;
+      font-family: inherit;
+      font-weight: 700;
+      font-size: 43px;
+      line-height: 50px;
+    }
   }
 
-  .promo__title br {
+  .promo__break {
     display: none;
+  }
+
+  .promo__blocks-container {
+    display: flex;
+    flex-wrap: nowrap;
   }
 
   .promo-block {
@@ -155,7 +174,7 @@
 
 @media (min-width: $desktop-width) {
   .promo {
-    background-image: url("../../img/index/hero-desktop.jpg") ;
+    background-image: url("../../img/index/hero-desktop.jpg");
     background-position: top 0px center;
     background-repeat: no-repeat;
     padding-top: 78px;
