--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -84,10 +84,16 @@
 
   &--interior {
     right: 36px;
+
+    fill: rgba(20, 144, 128, 1);
+    opacity: 0.5;
   }
 
   &--toy {
     right: 27px;
+
+    fill: rgba(20, 144, 128, 1);
+    opacity: 0.5;
   }
 }
 
