--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -8,16 +8,16 @@
 }
 
 .footer__logo-link {
-  color: #000000;
-  transition-duration: 0.2s;
+  fill: #000000;
+  transition-duration: 0.1s;
   transition-timing-function: linear;
 
   &:hover {
-    color: rgba(70, 193, 174, 1);
+    fill: rgba(70, 193, 174, 1);
   }
 
   &:active{
-    color: rgba(70, 193, 174, 0.3);
+    fill: rgba(70, 193, 174, 0.3);
   }
 }
 
@@ -46,16 +46,16 @@
 }
 
 .socials__link {
-  color: #000000;
-  transition-duration: 0.2s;
+  fill: #000000;
+  transition-duration: 0.1s;
   transition-timing-function: linear;
 
   &:hover {
-    color: rgba(70, 193, 174, 1);
+    fill: rgba(70, 193, 174, 1);
   }
 
   &:active{
-    color: rgba(70, 193, 174, 0.3);
+    fill: rgba(70, 193, 174, 0.3);
   }
 }
 
