--- a/source/sass/blocks/input.scss
+++ b/source/sass/blocks/input.scss
@@ -22,7 +22,7 @@
   background-color: transparent;
   box-shadow: inset 0px -2px 0px #000000;
 
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 19px;
