--- a/source/sass/blocks/main-product.scss
+++ b/source/sass/blocks/main-product.scss
@@ -1,5 +1,5 @@
 .main-product {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
 
   padding: 0 30px;
