--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -4,7 +4,7 @@
   height: 336px;
   margin: auto;
 
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
 
   padding: 0 30px;
   padding-top: 27px;
