--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,4 +1,5 @@
 .promo {
+  font-family: 'Open Sans', 'Arial', sans-serif;
   padding-top: 74px;
   background-color: #ffffff;
   background-image: url("../../img/index/hero-mobile@2x.jpg");
