--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -13,7 +13,7 @@
 }
 
 .content__title {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 27px;
