--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,7 @@
 
 @font-face {
   font-family: 'Open Sans';
+  font-display: swap;
   src: url("../fonts/opensans.woff") format("woff"),
 		url("../fonts/opensans.woff2") format("woff2");
 	font-weight: 400;
@@ -32,6 +33,7 @@
 
 @font-face {
   font-family: 'Open Sans';
+  font-display: swap;
   src: url("../fonts/opensansbold.woff") format("woff"),
 		url("../fonts/opensansbold.woff2") format("woff2");
 	font-weight: 700;
