--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -22,80 +22,11 @@
   }
 }
 
-.socials {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  min-width: 140px;
-  border-bottom: 1px solid #E5E5E5;
-
+.footer__socials {
   margin-bottom: 10px;
 }
 
-.socials__item {
-  margin-bottom: 23px;
 
-  &:not(:last-child) {
-    margin-right: 41px;
-  }
-}
-
-.socials__link {
-  fill: #000000;
-  transition-duration: 0.1s;
-  transition-timing-function: linear;
-
-  &:hover {
-    fill: rgba(70, 193, 174, 1);
-  }
-
-  &:active{
-    fill: rgba(70, 193, 174, 0.3);
-  }
-}
-
-.socials__icon {
-  color: inherit;
-}
-
-.copyright__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  text-decoration: none;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-
-  &:hover .copyright__logo {
-    fill: #46C1AE;
-  }
-
-  &:active .copyright__logo {
-    fill: #46C1AE;
-    opacity: 0.3;
-  }
-}
-
-.copyright__desc {
-  font-weight: 700;
-  font-size: 19px;
-  line-height: 18px;
-  color: #000000;
-  text-align: center;
-
-  margin-right: 28px;
-}
-
-.copyright__logo {
-  fill: #63D1BB;
-}
 
 @media (min-width: $tablet-width) {
   .footer {
@@ -111,16 +42,8 @@
     display: block;
   }
 
-  .socials {
+  .footer__socials {
     margin-top: 7px;
     border: none;
-  }
-
-  .socials__item {
-    margin-bottom: 0;
-  }
-
-  .copyright__desc  {
-    margin-top: 12px;
   }
 }
