--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -8,7 +8,7 @@
   z-index: 2;
 }
 
-@media (max-width: $tablet-width) {
+@media (max-width: ($tablet-width - 1px)) {
   .menu--closed .menu__item {
     display: none;
   }
