--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,10 +7,15 @@
 @import "blocks/header.scss";
 @import "blocks/button.scss";
 @import "blocks/promo.scss";
+@import "blocks/promo-block.scss";
 @import "blocks/main-product.scss";
 @import "blocks/features.scss";
 @import "blocks/reviews.scss";
+@import "blocks/review.scss";
+@import "blocks/slider.scss";
 @import "blocks/contacts.scss";
+@import "blocks/socials.scss";
+@import "blocks/copyright.scss";
 @import "blocks/footer.scss";
 @import "blocks/radio.scss";
 @import "blocks/checkbox.scss";
@@ -18,6 +23,7 @@
 @import "blocks/textarea.scss";
 @import "blocks/form.scss";
 @import "blocks/products.scss";
+@import "blocks/product.scss";
 @import "blocks/creation.scss";
 @import "blocks/modal.scss";
 
