--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -5,9 +5,12 @@
   font-size: 18px;
   line-height: 20px;
   text-transform: uppercase;
+  text-decoration: none;
   color: #444444;
 
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
   width: 100%;
   min-height: 52px;
