--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,6 +1,9 @@
 .footer {
   font-family: 'Open Sans', 'Arial', sans-serif;
   background-color: #F1F1F1;
+}
+
+.footer__inner {
   padding: 23px 30px 10px 30px;
 }
 
@@ -29,13 +32,17 @@
 
 
 @media (min-width: $tablet-width) {
-  .footer {
+  .footer__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     padding: 0 50px;
     min-height: 143px;
+
+    box-sizing: border-box;
+    max-width: $tablet-width;
+    margin: 0 auto;
   }
 
   .footer__logo {
@@ -45,5 +52,11 @@
   .footer__socials {
     margin-top: 7px;
     border: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .footer__inner {
+    max-width: $desktop-width;
   }
 }
