--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -1,11 +1,11 @@
 .menu {
+  position: relative;
   font-family: 'Open Sans', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 24px; // 32 px pixelperfect
   color: #000000;
-  z-index: 2;
 }
 
 @media (max-width: ($tablet-width - 1px)) {
@@ -131,7 +131,6 @@
     order: 1;
     grid-column: 1/3;
     padding-left: 50px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 
     & .menu__link {
@@ -149,8 +148,6 @@
     order: 2;
     grid-column: 3/4;
 
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-
     & .menu__link {
       font-size: 0;
     }
@@ -160,7 +157,6 @@
     order: 3;
     grid-column: 4/6;
     padding-right: 50px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     border-left: 1px solid rgba(0, 0, 0, 0.1);
 
     & .menu__link {
@@ -230,7 +226,6 @@
     font-size: 17px;
     line-height: 24px;
 
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 
   }
@@ -244,8 +239,6 @@
     font-weight: 700;
     font-size: 17px;
     line-height: 24px;
-
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
 
   .menu__item--logo {
@@ -254,9 +247,6 @@
     grid-column: 3/5;
     padding: 0;
 
-
-
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 
     & .menu__link {
