--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,5 +1,5 @@
 .page {
-  width: 320px;
+  /* width: 320px; */
   margin: 0 auto;
 
   background-color: #ffffff;
@@ -41,21 +41,13 @@
 
 @media (min-width:$tablet-width) {
   .page {
-    width: $tablet-width;
-  }
-
-  .page__content {
-    margin-top: -67px;
+    /* width: $tablet-width; */
   }
 }
 
 @media (min-width:$desktop-width) {
   .page {
-    width: $desktop-width;
-  }
-
-  .page__content {
-    margin-top: -67px;
+    /* width: $desktop-width; */
   }
 }
 
