--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -55,7 +55,7 @@
   }
 }
 
-@media (min-width: $tablet-width) {
+@media (min-width: $desktop-width) {
   .footer__inner {
     max-width: $desktop-width;
   }
