--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,66 +1,27 @@
-.content {
-  background-color: #FFFFFF;
-}
-
 .content--catalog {
+  padding: 30px;
   padding-bottom: 57px;
-}
 
-.content__title-wrapper {
-  background-color: #F1F1F1;
-  padding: 73.5px 30px;
-}
-
-.content__title {
-  font-family: 'Open Sans', 'Arial', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 27px;
-  line-height: 30px;
-  color: #000000;
-  text-align: center;
-
-  margin: 0;
+  box-sizing: border-box;
+  max-width: $mobile-width;
+  margin: 0 auto;
 }
 
 .content__products {
-  margin: 30px;
-}
-
-.content__creation {
-  margin: 0 30px;
+  margin-bottom: 30px;
 }
 
 @media (min-width: $tablet-width) {
+  .content--catalog {
+    max-width: $tablet-width;
+    margin-bottom: 65px;
+    margin-top: 67px;
 
-  .content__title-wrapper {
-    padding-top: 100px;
-    padding-bottom: 88px;
-
-    background-image: url("../../img/zigzag-fill-desktop.svg");
-    background-position: bottom;
-    background-repeat: repeat-x;
-
-    margin-top: -67px;
-  }
-
-  .content__title {
-    font-size: 43px;
-    line-height: 50px;
+    padding: 0 50px;
   }
 
   .content__products {
-    margin: 0 50px;
-    margin-top: 67px;
-    margin-bottom: 50px;
-  }
-
-  .content__creation {
-    margin: 0 50px;
-  }
-
-  .content--catalog {
-    padding-bottom: 65px;
+    margin-bottom: 55px;
   }
 }
 
@@ -72,19 +33,8 @@
     margin: 0 auto;
   }
 
-  .content__title-wrapper {
-    padding-top: 100px;
-    padding-bottom: 116px;
-
-    background-image: url("../../img/zigzag-fill-desktop.svg");
-    background-position: bottom;
-    background-repeat: repeat-x;
-    background-size: auto 36px;
-  }
-
-  .content__title {
-    font-size: 53px;
-    line-height: 57px;
+  .content--catalog {
+    max-width: $desktop-width;
   }
 
   .content__products {
@@ -93,7 +43,6 @@
   }
 
   .content__creation {
-    margin: 0 50px;
-    margin-bottom: 38px;
+    margin-bottom: 105px;
   }
 }
