--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,5 +1,5 @@
 .page {
-  /* width: 320px; */
+  min-width: $mobile-width;
   margin: 0 auto;
 
   background-color: #ffffff;
@@ -40,14 +40,10 @@
 
 
 @media (min-width:$tablet-width) {
-  .page {
-    /* width: $tablet-width; */
-  }
+
 }
 
 @media (min-width:$desktop-width) {
-  .page {
-    /* width: $desktop-width; */
-  }
+
 }
 
