Поменял везде ковычки для единообразия

--- a/source/sass/blocks/creation.scss
+++ b/source/sass/blocks/creation.scss
@@ -1,5 +1,5 @@
 .creation {
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   border: 1px solid #ECECEC;
   background-color: #FFFFFF;
   user-select: none;
