--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -34,7 +34,7 @@
 }
 
 .header__title {
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 27px;
