--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,5 +1,5 @@
 .products {
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   background-color: #FFFFFF;
 }
 
