--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,5 +1,5 @@
 .promo {
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   padding-top: 74px;
   background-color: #F9F9F9;
   background-image: url("../../img/index/hero-mobile@2x.jpg");
