--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,5 +1,5 @@
 .reviews {
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
 
 
   background-image: url("../../img/zigzag-line-desktop.svg");
