--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,5 +1,5 @@
 .features {
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
 
   background-color: #ffffff;
