--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
 
   background-color: #ffffff;
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
 }
 
 .page__modal {
