--- a/source/sass/blocks/textarea.scss
+++ b/source/sass/blocks/textarea.scss
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   box-shadow: none;
 
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 19px;
