--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -67,15 +67,15 @@
   height: 454px;
   width: 100%;
 
-  background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-mobile@1x.png");
+  background-image: url("../../img/index/map-mobile@1x.png");
   background-repeat: no-repeat;
-  background-position: left 138px top 145px, center;
+  background-position: center;
 
   margin-bottom: 41px;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-mobile@2x.png");
-    background-size: auto, contain;
+    background-image: url("../../img/index/map-mobile@2x.png");
+    background-size: contain;
   }
 }
 
@@ -144,15 +144,15 @@
   .contacts__map {
     width: 100%;
     height: 457px;
-    background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-tablet@1x.png");
+    background-image: url("../../img/index/map-tablet@1x.png");
     background-repeat: no-repeat;
-    background-position: top 140px left 360px, center;
+    background-position: center;
 
     margin-bottom: 56px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-tablet@2x.png");
-      background-size: auto, contain;
+      background-image: url("../../img/index/map-tablet@2x.png");
+      background-size: contain;
     }
   }
 
@@ -236,12 +236,12 @@
     width: 100%;
     height: 457px;
 
-    background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-desktop@1x.png");
-    background-position: left 238px top 144px, center;
+    background-image: url("../../img/index/map-desktop@1x.png");
+    background-position: center;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/index/map-pin.svg"), url("../../img/index/map-desktop@2x.png");
-      background-size: auto, contain;
+      background-image: url("../../img/index/map-desktop@2x.png");
+      background-size: contain;
     }
   }
 
