--- a/source/sass/blocks/creation.scss
+++ b/source/sass/blocks/creation.scss
@@ -52,6 +52,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 150px;
+  background-color: #F1F1F1;
   background-image: url("../../img/catalog/video-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
