--- a/source/sass/blocks/creation.scss
+++ b/source/sass/blocks/creation.scss
@@ -57,6 +57,7 @@
   background-position: center;
   background-repeat: no-repeat;
 
+  align-self: center;
   margin-bottom: 35px;
 
   @media (min-resolution: 2dppx) {
