--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -41,6 +41,7 @@
     background-position: top -2px center;
     background-size: auto;
 
+
     position: relative;
     padding-top: 0;
 
@@ -101,11 +102,13 @@
 
   .promo__blocks-container {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
   }
 
   .promo__block {
     flex-grow: 1;
+    flex-shrink: 0;
+    min-width: 334px;
   }
 }
 
